Revert "fixed some bugs"
This reverts commit 8ebc79a2fe0067345800e85a4dc6b4cbd29acca3.

--- a/app/views/messages/create.turbo_stream.erb
+++ b/app/views/messages/create.turbo_stream.erb
@@ -4,4 +4,7 @@
 <%= turbo_stream.replace "#{dom_id(Message.new)}_form" do %>
   <%= render "form", message: Message.new, conversation: @conversation %>
 <% end %>
-
+<%# <script>$('.messages_inbox').animate({
+  scrollTop: $('#inbox_end').offsetTop
+}, 100);
+</script> %>
