--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -21,7 +21,7 @@
           <div class="flex flex-col space-y-1 mt-4 -mx-2 min-h-screen overflow-y-auto">
 
           <div class="mt-5 text-center">
-            <%#= link_to "New Conversations", new_conversation_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-xl" %>
+            <%= link_to "New Conversations", new_conversation_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-xl" %>
           </div>
 
             <% current_user.conversations&.reverse.each do |conversation| %> 
@@ -59,7 +59,7 @@
          </turbo-frame>
         <div id="inbox_end"></div>
         </div>
-        <%= render 'messages/form', message: Message.new, conversation: @conversation %>
+        <%= render 'form', message: Message.new, conversation: @conversation %>
       </div>
     </div>
   <% end %>
