--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,10 +1,10 @@
-<% if message.response != true %>
+<% if message.role == "system" %>
     <div class="col-start-1 col-end-8 p-3 rounded-lg">
         <div class="flex flex-row items-center">
             <div
             class="flex items-center justify-center h-10 w-10 rounded-full bg-indigo-500 flex-shrink-0"
             >
-            <%= message.user.email.first %>
+            <%= message.conversation.user.email.first %>
             </div>
             <div
             class="relative ml-3 text-sm bg-white py-2 px-4 shadow rounded-xl"
@@ -14,7 +14,7 @@
         </div>
     </div>
     <% end %> 
-<% if message.response == true %>
+<% if message.role != "system" %>
     <div class="col-start-6 col-end-13 p-3 rounded-lg">
         <div class="flex items-center justify-start flex-row-reverse">
             <div
