updated message roles

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<% if message.role == "system" %>
+<% if message.role == "user" %>
     <div class="col-start-1 col-end-8 p-3 rounded-lg">
         <div class="flex flex-row items-center">
             <div
@@ -13,8 +13,8 @@
             </div>
         </div>
     </div>
-    <% end %> 
-<% if message.role != "system" %>
+<% end %> 
+<% if message.role != "user" %>
     <div class="col-start-6 col-end-13 p-3 rounded-lg">
         <div class="flex items-center justify-start flex-row-reverse">
             <div
